# monorepo-dependency-graph

./: BUILD.bazel  README.md  WORKSPACE  main.ts  package.json  tsconfig.json
example/one/: package.json
example/three/: package.json
example/two/: package.json
